--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,8 @@
 <classpath>
 	<classpathentry excluding="edu/jhuapl/sbmt/gui/time/StateHistoryPopupMenu.java" kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
+	<classpathentry kind="lib" path="lib/jide-oss-java11.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/saavtk"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
@@ -29,6 +31,5 @@
 	<classpathentry kind="lib" path="/saavtk/lib/jafama-2.3.1.jar"/>
 	<classpathentry kind="lib" path="/saavtk/lib/jsr305.jar"/>
 	<classpathentry kind="lib" path="lib/gdal-3.6.0.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/saavtk"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
