RM 2527: use instrument name, not inst. frame name for pointings.
These changes look bigger than they actually are.

SpicePointingProvider.java was reworked to take instrument names
on all public methods, rather than ever using the instrument frame
name. A new builder method addInstrumentFrame(instrumentName) allows
calling code to hook up an instrument, with SpicePointingProvider
handling all the frames internally.

IPointingProvider was similarly updated, and everything that called
it, and everything that called everything that called it etc.

In all cases the calling code was defacto passing the instrument
name and not the frame name, so the only impact *should be* that
now the code that calls SPICE will work correctly.

--- a/pipeline/rawdata/generic/createInfoFiles/Makefile
+++ b/pipeline/rawdata/generic/createInfoFiles/Makefile
@@ -1,5 +1,5 @@
 # SPICE
-SPICE_DIR			= /project/sbmtpipeline/software/spice/cspice-20220921/cspice
+SPICE_DIR			= /Users/peachjm1/jhuapl/dev/spice/naif-tools/cspice
 SPICE_LIB			= $(SPICE_DIR)/lib/cspice.a
 #
 # CFITSIO
@@ -13,7 +13,7 @@ LIB_CFITSIO			=
 # Compiler
 CXX				= g++
 # Change -O2 to -O0 -g for debugging
-COPT				= -O2
+COPT				= -O0 -g
 CFLAGS				= -Wall --pedantic -Wno-long-long
 CINCLUDES			= -I$(SPICE_DIR)/include -I.
 CLIBS				= $(SPICE_LIB)
