--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,20 @@
 			<artifactId>sqlite-jdbc</artifactId>
 			<version>3.41.2.1</version>
 		</dependency>
+		<!-- GDAL -->
+		<dependency>
+			<groupId>edu.jhuapl.ses.gdal</groupId>
+			<artifactId>gdal-java-all</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
+	<distributionManagement>
+		<repository>
+			<id>central</id>
+			<name>surfshop-snapshots</name>
+			<url>http://surfshop.jhuapl.edu:8081/artifactory/libs-snapshot-local</url>
+		</repository>
+	</distributionManagement>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<testSourceDirectory>test</testSourceDirectory>
