--- a/src/Makefile
+++ b/src/Makefile
@@ -175,7 +175,7 @@ ${int_mac_zip} : ${NEARAPLJAR}
 		cp ${NEARAPLJAR} ${int_mac_sbmt_lib_dir}/near.jar
 		cp -R ${vtk_dir}/mac64 ${int_mac_sbmt_lib_dir}
 		cp -R ${jre_dir}/mac64 ${int_mac_sbmt_dir}
-		cp -R ${gdal_dir} ${int_mac_sbmt_lib_dir}
+		cp -R ${gdal_dir}/mac64 ${int_mac_sbmt_lib_dir}
 		rm -rf ${int_mac_sbmt_dir}/jre
 		mv ${int_mac_sbmt_dir}/mac64 ${int_mac_sbmt_dir}/jre
 		cp ${top_level_dir}/src/edu/jhuapl/sbmt/data/license.txt ${int_mac_sbmt_lib_dir}
@@ -200,7 +200,7 @@ ${int_linux_zip} : ${NEARAPLJAR}
 		cp ${NEARAPLJAR} ${int_linux_sbmt_lib_dir}/near.jar
 		cp -R ${vtk_dir}/linux64 ${int_linux_sbmt_lib_dir}
 		cp -R ${jre_dir}/linux64 ${int_linux_sbmt_dir}
-		cp -R ${gdal_dir} ${int_linux_sbmt_lib_dir}
+		cp -R ${gdal_dir}/linux64 ${int_linux_sbmt_lib_dir}
 		rm -rf ${int_linux_sbmt_dir}/jre
 		mv ${int_linux_sbmt_dir}/linux64 ${int_linux_sbmt_dir}/jre
 		cp ${top_level_dir}/src/edu/jhuapl/sbmt/data/license.txt ${int_linux_sbmt_lib_dir}
@@ -223,7 +223,7 @@ ${int_linuxu20_zip} : ${NEARAPLJAR}
 		cp ${NEARAPLJAR} ${int_linuxu20_sbmt_lib_dir}/near.jar
 		cp -R ${vtk_dir}/linux64 ${int_linuxu20_sbmt_lib_dir}
 		cp -R ${jre_dir}/linux64 ${int_linuxu20_sbmt_dir}
-		cp -R ${gdal_dir} ${int_linuxu20_sbmt_lib_dir}
+		cp -R ${gdal_dir}/linux64u20 ${int_linuxu20_sbmt_lib_dir}
 		rm -rf ${int_linuxu20_sbmt_dir}/jre
 		mv ${int_linuxu20_sbmt_dir}/linux64u20 ${int_linuxu20_sbmt_dir}/jre
 		cp ${top_level_dir}/src/edu/jhuapl/sbmt/data/license.txt ${int_linuxu20_sbmt_lib_dir}
@@ -249,7 +249,7 @@ ${int_win_zip} : ${NEARAPLJAR}
 		cp ${NEARAPLJAR} ${int_win_sbmt_lib_dir}/near.jar
 		cp -R ${vtk_dir}/win64 ${int_win_sbmt_lib_dir}
 		cp -R ${jre_dir}/win64 ${int_win_sbmt_dir}
-		cp -R ${gdal_dir} ${int_win_sbmt_lib_dir}
+		cp -R ${gdal_dir}/win64 ${int_win_sbmt_lib_dir}
 		rm -rf ${int_win_sbmt_dir}/jre
 		mv ${int_win_sbmt_dir}/win64 ${int_win_sbmt_dir}/jre
 		cp ${top_level_dir}/src/edu/jhuapl/sbmt/data/license.txt ${int_win_sbmt_lib_dir}
