--- a/pom.xml
+++ b/pom.xml
@@ -46,11 +46,19 @@
 		<dependency>
 			<groupId>edu.jhuapl.ses.gdal</groupId>
 			<artifactId>gdal-java-all</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>1.0.0.4</version>
 		</dependency>
 	</dependencies>
 		<!-- Repositories, so can be built on checkout without settings.xml file in place -->
     <repositories>
+        <repository>
+          <snapshots>
+            <enabled>false</enabled>
+          </snapshots>
+          <id>thirdparty</id>
+          <name>libs-3rdparty-local</name>
+          <url>http://surfshop.jhuapl.edu:8081/artifactory/libs-3rdparty-local</url>
+        </repository>
         <repository>
           <snapshots>
             <enabled>false</enabled>
