--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
 			<artifactId>sqlite-jdbc</artifactId>
 			<version>3.41.2.1</version>
 		</dependency>
+		<dependency>
+  			<groupId>info.picocli</groupId>
+  			<artifactId>picocli</artifactId>
+  			<version>4.7.4</version>
+		</dependency>
 		<!-- GDAL -->
 		<dependency>
 			<groupId>edu.jhuapl.ses.gdal</groupId>
