--- a/.classpath
+++ b/.classpath
@@ -29,9 +29,10 @@
 	<classpathentry kind="lib" path="lib/drmaa.jar"/>
 	<classpathentry kind="lib" path="lib/spice-N0065.jar"/>
 	<classpathentry kind="lib" path="lib/altwg.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/sbmt-pipeline"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/sbmt-layer"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/saavtk"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/sbmt-core"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/saavtk"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/sbmt-layer"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/sbmt-pipeline"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/sbmt-pointing"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
