--- a/.classpath
+++ b/.classpath
@@ -13,13 +13,12 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/jide-oss-java11.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-16">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
-			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/jide-oss-java11.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
@@ -29,19 +28,19 @@
 	<classpathentry kind="lib" path="lib/drmaa.jar"/>
 	<classpathentry kind="lib" path="lib/spice-N0065.jar"/>
 	<classpathentry kind="lib" path="lib/altwg.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/sbmt-stateHistory"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/sbmt-lidar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/sbmt-dem"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/sbmt-spectrum"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/sbmt-query"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/sbmt-pointing"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/sbmt-pipeline"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/sbmt-layer"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/saavtk"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/sbmt-core"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/sbmt-config"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/sbmt-util"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/sbmt-image"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/sbmt-model"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/sbmt-image"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/sbmt-util"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/sbmt-config"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/sbmt-core"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/sbmt-layer"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/sbmt-pipeline"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/sbmt-pointing"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/sbmt-query"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/sbmt-spectrum"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/sbmt-dem"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/sbmt-lidar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/sbmt-stateHistory"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/saavtk"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
