Updated the name of the package in the pom

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>sbmt</groupId>
 	<artifactId>sbmt</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
-	<name>sbmt</name>
+	<name>sbmt-client</name>
 	<description>The Small Body Mapping Tool</description>
 	<dependencies>
 		<dependency>
