--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="https://maven.apache.org/POM/4.0.0" xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>sbmt</groupId>
-	<artifactId>sbmt</artifactId>
+	<groupId>edu.jhuapl.ses.srn.sbmt</groupId>
+	<artifactId>sbmt-client</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<name>sbmt-client</name>
 	<description>The Small Body Mapping Tool</description>
