--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>edu.jhuapl.ses.srn.sbmt</groupId>
 	<artifactId>sbmt-client</artifactId>
-	<version>1.0.1-b0-SNAPSHOT</version>
+	<version>1.0.2-b1-SNAPSHOT</version>
 	<name>sbmt-client</name>
 	<description>The Small Body Mapping Tool</description>
 	<dependencies>
@@ -55,27 +55,27 @@
 		<dependency>
 			<groupId>edu.jhuapl.ses.srn.saavtk</groupId>
 			<artifactId>saavtk</artifactId>
-			<version>1.0.1-b0-SNAPSHOT</version>
+			<version>1.2.0-b1-SNAPSHOT</version> 
 		</dependency>
 		<dependency>
 			<groupId>edu.jhuapl.ses.srn.sbmt</groupId>
 			<artifactId>sbmt-core</artifactId>
-			<version>1.0.3-b0-SNAPSHOT</version>
+			<version>1.0.4-b1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>edu.jhuapl.ses.srn.sbmt</groupId>
 			<artifactId>sbmt-config</artifactId>
-			<version>1.0.3-b0-SNAPSHOT</version>
+			<version>1.0.4-b1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>edu.jhuapl.ses.srn.sbmt</groupId>
 			<artifactId>sbmt-dem</artifactId>
-			<version>1.0.1-b0-SNAPSHOT</version>
+			<version>1.0.2-b1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>edu.jhuapl.ses.srn.sbmt</groupId>
 			<artifactId>sbmt-image</artifactId>
-			<version>1.0.1-b0-SNAPSHOT</version>
+			<version>1.1.1-b2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>edu.jhuapl.ses.srn.sbmt</groupId>
@@ -85,12 +85,12 @@
 		<dependency>
 			<groupId>edu.jhuapl.ses.srn.sbmt</groupId>
 			<artifactId>sbmt-lidar</artifactId>
-			<version>1.0.1-b0-SNAPSHOT</version>
+			<version>1.0.2-b1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>edu.jhuapl.ses.srn.sbmt</groupId>
 			<artifactId>sbmt-model</artifactId>
-			<version>1.0.1-b0-SNAPSHOT</version>
+			<version>1.0.3-b2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>edu.jhuapl.ses.srn.sbmt</groupId>
@@ -100,27 +100,27 @@
 		<dependency>
 			<groupId>edu.jhuapl.ses.srn.sbmt</groupId>
 			<artifactId>sbmt-pointing</artifactId>
-			<version>1.0.1-b0-SNAPSHOT</version>
+			<version>1.0.2-b1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>edu.jhuapl.ses.srn.sbmt</groupId>
 			<artifactId>sbmt-query</artifactId>
-			<version>1.0.3-b0-SNAPSHOT</version>
+			<version>1.0.4-b1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>edu.jhuapl.ses.srn.sbmt</groupId>
 			<artifactId>sbmt-spectrum</artifactId> 
-			<version>1.0.1-b0-SNAPSHOT</version>
+			<version>1.0.2-b1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>edu.jhuapl.ses.srn.sbmt</groupId>
 			<artifactId>sbmt-stateHistory</artifactId>
-			<version>1.0.1-b0-SNAPSHOT</version>
+			<version>1.0.3-b2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>edu.jhuapl.ses.srn.sbmt</groupId>
 			<artifactId>sbmt-util</artifactId>
-			<version>1.0.2-b0-SNAPSHOT</version>
+			<version>1.0.3-b1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 		<!-- Repositories, so can be built on checkout without settings.xml file in place -->
@@ -161,13 +161,14 @@
 					<release>16</release>
 				</configuration>
 			</plugin>
+			<!--
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-antrun-plugin</artifactId>
 				<version>3.1.0</version>
 				<executions>
 					<execution>
-						<?m2e execute onConfiguration?>
+						<?m2e execute onConfiguration,onIncremental?>
 						<phase>compile</phase>
 						<configuration>
 							<target>
@@ -183,6 +184,7 @@
 					</execution>
 				</executions>
 			</plugin>
+			-->
 		</plugins>
 	</build>
 </project>
