--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,12 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.10.2</version>
+            <scope>test</scope>
+        </dependency>
+		<dependency>
   			<groupId>com.formdev</groupId>
   			<artifactId>jide-oss</artifactId>
   			<version>3.7.12</version>
