--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
 		<dependency>
 			<groupId>edu.jhuapl.ses.srn.sbmt</groupId>
 			<artifactId>sbmt-image</artifactId>
-			<version>1.2.1.172-b8-SNAPSHOT</version>
+			<version>1.2.1.38-b8-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>edu.jhuapl.ses.srn.sbmt</groupId>
@@ -151,9 +151,16 @@
 		<resources>
 			<resource>
 				<directory>src</directory>
-				<excludes>
+				<includes>
+                    <include>edu/jhuapl/sbmt/data/*.png</include>
+                    <include>edu/jhuapl/sbmt/data/*.txt</include>
+                    <include>edu/jhuapl/sbmt/data/*.vtk</include>
+                    <include>edu/jhuapl/sbmt/data/*.js</include>
+                    <include>edu/jhuapl/sbmt/data/*.tls</include>
+                </includes>
+				<!-- <excludes>
 					<exclude>**/*.java</exclude>
-				</excludes>
+				</excludes> -->
 			</resource>
 		</resources>
 		<plugins>
