--- a/pom.xml
+++ b/pom.xml
@@ -48,9 +48,9 @@
   			<version>4.7.4</version>
 		</dependency>
 		<dependency>
-			<groupId>edu.jhuapl.ses.saavtk</groupId>
+			<groupId>edu.jhuapl.ses.srn.saavtk</groupId>
 			<artifactId>saavtk</artifactId>
-			<version>1.0.0</version> 
+			<version>2.0.4-b1-SNAPSHOT</version> 
 		</dependency>
 		<dependency>
 			<groupId>edu.jhuapl.ses.sbmt</groupId>
